<resources>
    <string name="app_name">ExpenseMiniProject</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_log_in">Please, Log In</string>
    <string name="welcome_back">Welcome Back</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="create_an_account">Create an account</string>
    <string name="or">Or</string>
    <string name="hi_there">Hi there!</string>
    <string name="let_s_gets_started">Let\'s Gets Started</string>

</resources>