<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_login_register"
    tools:context=".view.LoginFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/tvFirstTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:src="@drawable/icon_login"
        tools:ignore="ContentDescription" />


    <TextView
        android:id="@+id/tvFirstTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/tvSecondTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:text="@string/welcome_back"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvSecondTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/edtUsername"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:text="@string/please_log_in"
        android:textSize="32sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/username"
        android:inputType="textAutoCorrect"
        android:padding="8dp"
        android:textAlignment="center"
        android:textSize="24sp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/edtUsername"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textAlignment="center"
        android:textSize="24sp"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@+id/edtPassword"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/button"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:text="@string/or"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnRegister"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@+id/tvOr"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/button"
        android:text="@string/create_an_account"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>